@@ -27,6 +27,5 @@
 %import "include/wxEvent.h"
 %import "include/wxCommandEvent.h"
 %import "include/wxNotifyEvent.h"
-%import "include/wxGridEvent.h"
 
 %include "include/wxGridRangeSelectEvent.h"
