@@ -25,13 +25,13 @@ public:
 	 * \param wxEvtHandler*   
 	*/
 
-  void Create(wxWindow*  parent , wxWindowID  id , wxEvtHandler*  evtHandler ) ;
+  virtual void Create(wxWindow*  parent , wxWindowID  id , wxEvtHandler*  evtHandler ) = 0;
 	/**
 	 * \brief Size and position the edit control. 
 	 * \param const wxRect&   
 	*/
 
-  void SetSize(const wxRect&  rect ) ;
+  virtual void SetSize(const wxRect&  rect ) ;
 	/**
 	 * \brief Show or hide the edit control, use the specified attributes to set
 colours/fonts for it. 
@@ -39,7 +39,7 @@ colours/fonts for it.
 	 * \param wxGridCellAttr*   
 	*/
 
-  void Show(bool  show , wxGridCellAttr*  attr = NULL) ;
+  virtual void Show(bool  show , wxGridCellAttr*  attr = NULL) ;
 	/**
 	 * \brief Draws the part of the cell not occupied by the control: the base class
 version just fills it with background colour from the attribute. 
@@ -47,7 +47,7 @@ version just fills it with background colour from the attribute.
 	 * \param wxGridCellAttr*   
 	*/
 
-  void PaintBackground(const wxRect&  rectCell , wxGridCellAttr*  attr ) ;
+  virtual void PaintBackground(const wxRect&  rectCell , wxGridCellAttr*  attr ) ;
 	/**
 	 * \brief Fetch the value from the table and prepare the edit control
 to begin editing. Set the focus to the edit control. 
@@ -56,7 +56,7 @@ to begin editing. Set the focus to the edit control.
 	 * \param wxGrid*   
 	*/
 
-  void BeginEdit(int  row , int  col , wxGrid*  grid ) ;
+  virtual void BeginEdit(int  row , int  col , wxGrid*  grid ) = 0;
 	/**
 	 * \brief Complete the editing of the current cell. Returns true if the value has
 changed. If necessary, the control may be destroyed. 
@@ -65,12 +65,12 @@ changed. If necessary, the control may be destroyed.
 	 * \param wxGrid*   
 	*/
 
-  bool EndEdit(int  row , int  col , wxGrid*  grid ) ;
+  virtual bool EndEdit(int  row , int  col , wxGrid*  grid ) = 0;
 	/**
 	 * \brief Reset the value in the control back to its starting value. 
 	*/
 
-  void Reset() ;
+  virtual void Reset() = 0;
 	/**
 	 * \brief If the editor is enabled by pressing keys on the grid,
 this will be called to let the editor do something about
@@ -78,35 +78,34 @@ that first key if desired.
 	 * \param wxKeyEvent&   
 	*/
 
-  void StartingKey(wxKeyEvent&  event ) ;
+  virtual void StartingKey(wxKeyEvent&  event ) ;
 	/**
 	 * \brief If the editor is enabled by clicking on the cell, this method will be
 called. 
 	*/
 
-  void StartingClick() ;
+  virtual void StartingClick() ;
 	/**
 	 * \brief Some types of controls on some platforms may need some help
 with the Return key. 
 	 * \param wxKeyEvent&   
 	*/
 
-  void HandleReturn(wxKeyEvent&  event ) ;
+  virtual void HandleReturn(wxKeyEvent&  event ) ;
 	/**
 	 * \brief Final cleanup. 
 	*/
 
-  void Destroy() ;
+  virtual void Destroy() ;
 	/**
 	 * \brief Create a new object which is the copy of this one. 
 	*/
 
-  wxGridCellEditor* Clone() const;
-	/**
-	 * \brief The dtor is private because only DecRef() can delete us. 
-	*/
+  virtual wxGridCellEditor* Clone() const = 0;
 
-  virtual  ~wxGridCellEditor() ;
+	// DJC MAPTEK
+	// added GetValue so we can get the value which is in the control
+	virtual wxString GetValue() const = 0;	
 };
 
 
