@@ -10,9 +10,9 @@ public:
    wxGridEvent(int  id , wxEventType  type , wxObject*  obj , int  row = -1, int  col = -1, int  x = -1, int  y = -1, bool  sel = true, bool  control = false, bool  shift = false, bool  alt = false, bool  meta = false) ;
   bool AltDown() ;
   bool ControlDown() ;
-  int GetCol() ;
+  virtual int GetCol() ;
   wxPoint GetPosition() ;
-  int GetRow() ;
+  virtual int GetRow() ;
   bool MetaDown() ;
   bool Selecting() ;
   bool ShiftDown() ;
